--- a/aula 2005/index.html
+++ b/aula 2005/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="estilo.css" />
   </head>
   <body>
+   <div class="todoconteudo">
     <div class="logo">
       <h1>Luiz Felipe</h1>
       <img src="img/Luiz.png" alt="foto de perfil" class="avatar" />
       <p class="contato">lfrsilv@gmail.com</p>
     </div>
-
+  
     <div class="meuslinks">
       
       <div class="links"><a href="https://github.com/LuizFelipe-TINF" target="_blank">Github</a></div>
@@ -25,7 +26,7 @@
       <h3 class="direitos">Esta página foi criada por LUIZ FELIPE</h3>
       <img src="img/iftm-logo.png" alt="logo IFTM" class="iftm" />
     </footer>
-  
+  </div>
 
 
 
